Bug 104991 - dvi is not working on Intel DG45ID
Summary: dvi is not working on Intel DG45ID
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: intel-gfx-bugs@lists.freedesktop.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-25 10:56 UTC by Oleksij Rempel
Modified: 2015-10-22 11:30 UTC (History)
1 user (show)

See Also:
Kernel Version: v4.3-rc1 and later
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (77.61 KB, text/plain)
2015-09-25 10:56 UTC, Oleksij Rempel
Details
dmidecode (15.11 KB, text/plain)
2015-09-25 10:57 UTC, Oleksij Rempel
Details

Description Oleksij Rempel 2015-09-25 10:56:18 UTC
This regression is present currently only v4.3-rc*. Since in this patrch range i had similar but not identical problems i was not able to bisect it.
With latest git i get this warning so mamy be it give you some idea.

[   12.514242] vgaarb: device changed decodes: PCI:0000:00:02.0,olddecodes=io+mem,decodes=io+mem:owns=io+mem
[   12.517558] ------------[ cut here ]------------
[   12.517593] WARNING: CPU: 0 PID: 289 at /home/kernel/COD/linux/drivers/gpu/drm/i915/i915_irq.c:179 i915_hpd_irq_setup+0xe9/0xf0 [i915]()
[   12.517595] WARN_ON(bits & ~mask)
[   12.517596] Modules linked in:
[   12.517597]  joydev input_leds coretemp kvm_intel kvm serio_raw uvcvideo videobuf2_vmalloc videobuf2_memops videobuf2_core v4l2_common snd_hda_intel(+) snd_usb_audio snd_usbmidi_lib videodev snd_hda_codec snd_hda_core media snd_hwdep hid_generic hid_logitech_hidpp snd_pcm snd_seq_midi snd_seq_midi_event snd_rawmidi snd_seq snd_seq_device snd_timer i915(+) lpc_ich snd drm_kms_helper winbond_cir rc_core drm soundcore mei_me mei 8250_fintek i2c_algo_bit fb_sys_fops syscopyarea sysfillrect sysimgblt mac_hid video parport_pc ppdev lp nfsd parport auth_rpcgss nfs_acl lockd grace sunrpc autofs4 hid_logitech_dj usbhid hid uas usb_storage psmouse ahci pata_acpi libahci e1000e fjes ptp pps_core
[   12.517635] CPU: 0 PID: 289 Comm: systemd-udevd Not tainted 4.3.0-994-generic #201509242200
[   12.517636] Hardware name:                  /DG45ID, BIOS IDG4510H.86A.0135.2011.0225.1100 02/25/2011
[   12.517638]  ffffffffc03e7a38 ffff8800c75bf828 ffffffff813a5f9d ffff8800c75bf870
[   12.517640]  ffff8800c75bf860 ffffffff8107a566 ffff8800c6390000 0000000030000320
[   12.517642]  ffff8800c6397c90 ffff8800c6390000 ffff8801a26df860 ffff8800c75bf8c0
[   12.517644] Call Trace:
[   12.517650]  [<ffffffff813a5f9d>] dump_stack+0x44/0x57
[   12.517653]  [<ffffffff8107a566>] warn_slowpath_common+0x86/0xc0
[   12.517654]  [<ffffffff8107a5ec>] warn_slowpath_fmt+0x4c/0x50
[   12.517673]  [<ffffffffc031bdc9>] i915_hpd_irq_setup+0xe9/0xf0 [i915]
[   12.517700]  [<ffffffffc039b66d>] intel_hpd_init+0xcd/0xf0 [i915]
[   12.517726]  [<ffffffffc03ce3ce>] i915_driver_load+0xe8e/0xf00 [i915]
[   12.517729]  [<ffffffff816e1ea8>] ? netlink_broadcast_filtered+0x138/0x3e0
[   12.517732]  [<ffffffff813a9290>] ? cleanup_uevent_env+0x10/0x10
[   12.517734]  [<ffffffff813a960f>] ? kobject_uevent_env+0x15f/0x660
[   12.517737]  [<ffffffff814ef7a7>] ? get_device+0x17/0x20
[   12.517739]  [<ffffffff814f5325>] ? klist_class_dev_get+0x15/0x20
[   12.517742]  [<ffffffff817a6d78>] ? klist_node_init+0x38/0x50
[   12.517743]  [<ffffffff817a6e30>] ? klist_add_tail+0x20/0x50
[   12.517745]  [<ffffffff814f1240>] ? device_add+0x270/0x600
[   12.517762]  [<ffffffffc026ed97>] drm_dev_register+0xa7/0xb0 [drm]
[   12.517772]  [<ffffffffc02719ff>] drm_get_pci_dev+0x8f/0x1f0 [drm]
[   12.517790]  [<ffffffffc03171e4>] i915_pci_probe+0x34/0x50 [i915]
[   12.517793]  [<ffffffff813f34b5>] local_pci_probe+0x45/0xa0
[   12.517795]  [<ffffffff813f4961>] pci_device_probe+0xe1/0x130
Comment 1 Oleksij Rempel 2015-09-25 10:56:42 UTC
Created attachment 188381 [details]
dmesg
Comment 2 Oleksij Rempel 2015-09-25 10:57:10 UTC
Created attachment 188391 [details]
dmidecode
Comment 3 Oleksij Rempel 2015-09-25 10:57:38 UTC
 intel_stepping 
Vendor: 0x8086, Device: 0x2e22, Revision: 0x03 (A3)
Comment 4 Jani Nikula 2015-10-07 11:59:30 UTC
Please try current drm-intel-nightly branch of http://cgit.freedesktop.org/drm-intel
Comment 5 Oleksij Rempel 2015-10-07 14:16:46 UTC
Build 4.3.0-rc4-01315-g3f7a6e1, same issue. Monitor shows: "Input Not Supported"
Comment 6 Oleksij Rempel 2015-10-17 07:53:56 UTC
New results for drm-intel-nightly branch of http://cgit.freedesktop.org/drm-intel:
Build Linux zwerg 4.3.0-rc5-00863-gf14b17b #24 SMP Sat Oct 17 09:18:30 CEST 2015 x86_64 x86_64 x86_64 GNU/Linux

is working! :D Thank you.
Comment 7 Oleksij Rempel 2015-10-17 07:55:06 UTC
But there is still some warning:

[    2.641439] ------------[ cut here ]------------
[    2.641444] WARNING: CPU: 0 PID: 1 at /home/oleksij/300/oleksij/tmp/linux/drivers/gpu/drm/i915/i915_irq.c:182 i915_hotplug_interrupt_update_locked+0x45/0x83()
[    2.641446] WARN_ON(bits & ~mask)
[    2.641447] Modules linked in:

[    2.641450] CPU: 0 PID: 1 Comm: swapper/0 Not tainted 4.3.0-rc5-00863-gf14b17b #24
[    2.641452] Hardware name:                  /DG45ID, BIOS IDG4510H.86A.0135.2011.0225.1100 02/25/2011
[    2.641453]  0000000000000000 ffff8801a49abac8 ffffffff81251882 ffff8801a49abb10
[    2.641456]  ffff8801a49abb00 ffffffff81057bcb ffffffff81360fef ffff8801a2500000
[    2.641459]  00000000c1fffd9f 0000000030000320 ffff8800c70aa800 ffff8801a49abb68
[    2.641461] Call Trace:
[    2.641466]  [<ffffffff81251882>] dump_stack+0x44/0x55
[    2.641470]  [<ffffffff81057bcb>] warn_slowpath_common+0x9f/0xb8
[    2.641472]  [<ffffffff81360fef>] ? i915_hotplug_interrupt_update_locked+0x45/0x83
[    2.641474]  [<ffffffff81057c2c>] warn_slowpath_fmt+0x48/0x50
[    2.641477]  [<ffffffff81602d2f>] ? mutex_unlock+0x16/0x18
[    2.641480]  [<ffffffff81360fef>] i915_hotplug_interrupt_update_locked+0x45/0x83
[    2.641482]  [<ffffffff81361071>] i915_hpd_irq_setup+0x44/0x47
[    2.641485]  [<ffffffff813c8e8e>] intel_hpd_init+0xc7/0xd4
[    2.641488]  [<ffffffff813f4ef9>] i915_driver_load+0x10b1/0x12a3
[    2.641490]  [<ffffffff813fd6bd>] ? klist_class_dev_get+0x15/0x17
[    2.641493]  [<ffffffff81600048>] ? klist_node_init+0x49/0x4e
[    2.641495]  [<ffffffff8160487c>] ? _raw_spin_lock+0xe/0x10
[    2.641498]  [<ffffffff813f87f9>] ? put_device+0x17/0x19
[    2.641500]  [<ffffffff813fa008>] ? device_add+0x37b/0x558
[    2.641502]  [<ffffffff812520f5>] ? idr_replace+0x34/0x98
[    2.641505]  [<ffffffff81346880>] drm_dev_register+0x6d/0xae
[    2.641507]  [<ffffffff81348954>] drm_get_pci_dev+0x100/0x1ba
[    2.641509]  [<ffffffff8135d024>] i915_pci_probe+0x48/0x4a
[    2.641512]  [<ffffffff8127f62e>] pci_device_probe+0x85/0xf0
[    2.641514]  [<ffffffff813fc9e6>] driver_probe_device+0x174/0x3af
[    2.641516]  [<ffffffff813fcc7e>] __driver_attach+0x5d/0x7f
[    2.641518]  [<ffffffff813fcc21>] ? driver_probe_device+0x3af/0x3af
[    2.641520]  [<ffffffff813fad06>] bus_for_each_dev+0x6d/0x85
[    2.641522]  [<ffffffff813fc30a>] driver_attach+0x1e/0x20
[    2.641524]  [<ffffffff813fbff5>] bus_add_driver+0x13d/0x235
[    2.641526]  [<ffffffff813fd4a4>] driver_register+0x8e/0xca
[    2.641528]  [<ffffffff81d587e0>] ? mipi_dsi_bus_init+0x12/0x12
[    2.641531]  [<ffffffff8127e038>] __pci_register_driver+0x49/0x4b
[    2.641533]  [<ffffffff81348a60>] drm_pci_init+0x52/0xd3
[    2.641535]  [<ffffffff81d587e0>] ? mipi_dsi_bus_init+0x12/0x12
[    2.641537]  [<ffffffff81d58874>] i915_init+0x94/0x9b
[    2.641539]  [<ffffffff81d587e0>] ? mipi_dsi_bus_init+0x12/0x12
[    2.641541]  [<ffffffff810003c2>] do_one_initcall+0x195/0x1aa
[    2.641544]  [<ffffffff8106e400>] ? parse_args+0x16b/0x378
[    2.641547]  [<ffffffff81d1dfbc>] kernel_init_freeable+0x113/0x1a0
[    2.641549]  [<ffffffff81600562>] ? rest_init+0x79/0x79
[    2.641551]  [<ffffffff81600570>] kernel_init+0xe/0xda
[    2.641553]  [<ffffffff81604eef>] ret_from_fork+0x3f/0x70
[    2.641555]  [<ffffffff81600562>] ? rest_init+0x79/0x79
[    2.641559] ---[ end trace 0844ffd9a03f640b ]---
Comment 8 Jani Nikula 2015-10-21 14:25:29 UTC
(In reply to Oleksij Rempel from comment #6)
> New results for drm-intel-nightly branch of
> http://cgit.freedesktop.org/drm-intel:
> Build Linux zwerg 4.3.0-rc5-00863-gf14b17b #24 SMP Sat Oct 17 09:18:30 CEST
> 2015 x86_64 x86_64 x86_64 GNU/Linux
> 
> is working! :D Thank you.

That's great, thanks for testing. We could close the bug since the original problem is now gone, but...

(In reply to Oleksij Rempel from comment #7)
> But there is still some warning:
> 
> [    2.641439] ------------[ cut here ]------------
> [    2.641444] WARNING: CPU: 0 PID: 1 at
> /home/oleksij/300/oleksij/tmp/linux/drivers/gpu/drm/i915/i915_irq.c:182
> i915_hotplug_interrupt_update_locked+0x45/0x83()
> [    2.641446] WARN_ON(bits & ~mask)

I think I've seen this before, but I couldn't find a bug for it. Please try [1] on top of the kernel that works. I think it should get rid of the warning. If not, let's open another bug at fdo to track that one.

[1] http://patchwork.freedesktop.org/patch/msgid/1445437363-3030-1-git-send-email-jani.nikula@intel.com
Comment 9 Oleksij Rempel 2015-10-21 18:30:17 UTC
It works,

no more warnings with this patch :)
Comment 10 Jani Nikula 2015-10-22 11:30:57 UTC
Thanks for testing, the fix was applied to drm-intel-next-fixes as

commit f9e3dc786a585e1ec371c446c62dcc77d0548629
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Wed Oct 21 17:22:43 2015 +0300

    drm/i915: add hotplug activation period to hotplug update mask

and it's headed to v4.4 along with the remains-to-be-identified fix that fixed the original bug reported here.

Note You need to log in before you can comment on or make changes to this bug.